# ot_harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
data/: taskboard.db
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
src/: main.py
src/entities/: label.py  project.py  task.py  user.py
src/gui/: __init__.py  app.py
src/repositories/: database.py  label_repository.py  project_repository.py  task_repository.py  user_repository.py
src/services/: auth_service.py  label_service.py  project_service.py  session_service.py  task_service.py  user_profile_service.py
src/tests/: auth_service_test.py  label_service_test.py  project_service_test.py  repository_test.py  session_service_test.py  task_service_test.py  user_profile_service_test.py
src/ui/: home_view.py  prompt_utils.py  sign_in_view.py  sign_up_view.py
