[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "TaskBoard desktop project"
readme = "README.md"
requires-python = ">=3.14,<4.0"
authors = [{ name = "rasmus" }]
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
