[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = "TaskBoard desktop project"
readme = "README.md"
requires-python = ">=3.14,<4.0"
authors = [{ name = "rasmus" }]
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "invoke (>=2.2.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "coverage (>=7.13.5,<8.0.0)"
]
