[project]
name = "viikko2"
version = "0.1.0"
description = ""
authors = [
    {name = "rasmuskoo",email = "rasmus.kaukonen@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
package-mode = false
